View Issue Details [ Jump to Notes ] | [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0015636 | CMake | CMake | public | 2015-06-30 00:54 | 2016-06-10 14:31 | ||||
Reporter | tim blechmann | ||||||||
Assigned To | Kitware Robot | ||||||||
Priority | normal | Severity | minor | Reproducibility | have not tried | ||||
Status | closed | Resolution | moved | ||||||
Platform | OS | OS Version | |||||||
Product Version | CMake 3.2.3 | ||||||||
Target Version | Fixed in Version | ||||||||
Summary | 0015636: alias libraries and and --graphviz | ||||||||
Description | when alias libraries are used, the dot files treat original and aliased library as different targets. therefore the dependencies are not visualised. this issue is somehow related to 0013809, which is about add_dependency. | ||||||||
Steps To Reproduce | add_library(foo) add_library(bar ALIAS foo) add_executable(baz) target_link_libraries(baz bar) expected behaviour: baz should visualise a dependency to foo. instead foo it shows a dependency to bar. | ||||||||
Tags | No tags attached. | ||||||||
Attached Files | |||||||||
Relationships | |||||||||||
|
Relationships |
Notes | |
(0039162) Lectem (reporter) 2015-07-22 04:13 |
I would love to see this issue fixed, I believe using namespaces (ALIAS) is a good practice (especially on big projects/libraries), but if we have to remove the aliases to get a dependency graph it's pretty annoying. A quick fix would be to use the same node number for both the original and the alias. |
(0042803) Kitware Robot (administrator) 2016-06-10 14:29 |
Resolving issue as `moved`. This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page. |
Notes |
Issue History | |||
Date Modified | Username | Field | Change |
2015-06-30 00:54 | tim blechmann | New Issue | |
2015-06-30 08:56 | Brad King | Relationship added | related to 0013809 |
2015-07-06 08:34 | Brad King | Relationship added | related to 0015638 |
2015-07-22 04:13 | Lectem | Note Added: 0039162 | |
2016-06-10 14:29 | Kitware Robot | Note Added: 0042803 | |
2016-06-10 14:29 | Kitware Robot | Status | new => resolved |
2016-06-10 14:29 | Kitware Robot | Resolution | open => moved |
2016-06-10 14:29 | Kitware Robot | Assigned To | => Kitware Robot |
2016-06-10 14:31 | Kitware Robot | Status | resolved => closed |
Issue History |
Copyright © 2000 - 2018 MantisBT Team |